# kintsugi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/kintsugi/: __init__.py  cli.py  codec.py  container.py  gf256.py  matrix.py
tests/: test_kintsugi.py
