[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kintsugi"
version = "0.1.0"
description = "Reed-Solomon erasure coding for files: split into shards, rebuild from whatever survives."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nkkb" }]
keywords = ["reed-solomon", "erasure-coding", "redundancy", "galois-field", "backup", "raid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
]

[project.scripts]
kintsugi = "kintsugi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kintsugi"]
